<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:isScrollContainer="true">
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none"
    android:layout_weight="1">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColor"
    android:isScrollContainer="true">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/amountBorrowed"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:hint="@string/hint"
        android:inputType="number|numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="32dp"
        android:id="@+id/textView1"
        android:layout_below="@+id/amountBorrowed"
        android:layout_centerHorizontal="true"
        android:text="@string/textView1"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_below="@+id/textView1"
        android:layout_alignLeft="@+id/amountBorrowed"
        android:layout_alignParentEnd="true"
        android:progress="50"
        android:onClick="onClick"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"

        android:id="@+id/textView11"
        android:layout_alignBottom="@+id/seekBar"
        android:layout_alignLeft="@+id/seekBar"
        android:text="@string/textView11"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"

        android:id="@+id/textView12"
        android:layout_alignBottom="@+id/seekBar"
        android:layout_alignRight="@+id/seekBar"
        android:text="@string/textView12"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="32dp"
        android:id="@+id/textViewRadioGroup"
        android:layout_below="@+id/seekBar"
        android:layout_alignLeft="@+id/amountBorrowed"
        android:text="@string/radioGroupName"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewRadioGroup"
        android:id="@+id/radioGroup"
        android:layout_alignLeft="@+id/amountBorrowed"
        android:layout_toStartOf="@+id/button">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton1"
            android:layout_alignLeft="@+id/radioGroup"
            android:id="@+id/radioButton1" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton2"
            android:layout_alignLeft="@+id/radioGroup"
            android:id="@+id/radioButton2" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton3"
            android:layout_alignLeft="@+id/radioGroup"
            android:id="@+id/radioButton3" />
    </RadioGroup>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/checkbox"
        android:id="@+id/checkBox"
        android:layout_alignLeft="@id/radioGroup"
        android:layout_below="@id/radioGroup"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button"
        android:id="@+id/button"
        android:layout_below="@+id/checkBox"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:background="@color/output"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/outputText"
        android:id="@+id/textView2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
</ScrollView>
    </RelativeLayout>